// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> should render 1`] = `
<DocumentFragment>
  <div
    class="sc-c8087764-0 eiHINF"
    width="150"
  >
    <button
      class="sc-c8087764-1 hpCTkN"
      color="var(--text)"
      font-size="24"
      height="50"
      width="150"
    >
      <div
        class="sc-c8087764-2 hwgIAl"
      >
        <div
          class="sc-c8087764-4 btSOSc"
        >
          Test
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Button/> should render in loading state 1`] = `
<DocumentFragment>
  <div
    class="sc-c8087764-0 eHJkMl loading"
  >
    <button
      class="sc-c8087764-1 eYFVmU loading"
      color="var(--text)"
      disabled=""
      font-size="24"
    >
      <div
        class="sc-c8087764-2 hwgIAl"
      >
        <div
          class="sc-c8087764-3 gpmtlB loading"
        >
          <div
            class="sc-4731ba6b-0 cnZVOU loader"
            color="var(--text)"
          />
        </div>
        <div
          class="sc-c8087764-4 btSOSc loading"
        >
          Test
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Button/> should render with custom props 1`] = `
<DocumentFragment>
  <div
    class="sc-c8087764-0 jNTqvr"
  >
    <button
      class="sc-c8087764-1 loRlQM"
      color="red"
      font-size="12"
    >
      <div
        class="sc-c8087764-2 hwgIAl"
      >
        <div
          class="sc-c8087764-4 btSOSc"
        >
          Test
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
